@@ -25,7 +25,6 @@ auto-learn level, chatlog or not, bot get angry or not, config_path ).
 
 FourDollars
 -----
-1. cancel the selected region when any key event
 
 emfox
 -----
