@@ -124,8 +124,8 @@ gboolean CMainFrame::OnSize( GtkWidget* widget, GdkEventConfigure* evt, CMainFra
 	gtk_window_get_position( GTK_WINDOW(widget), &AppConfig.MainWndX, & AppConfig.MainWndY );
 	AppConfig.MainWndW = evt->width;
 	AppConfig.MainWndH = evt->height;
-	INFO("x=%d, y=%d, w=%d, h=%d", evt->x, evt->y, evt->width, evt->height );
-	INFO("get_pos: x=%d, y=%d",AppConfig.MainWndX, AppConfig.MainWndY );
+	INFO("x=%d, y=%d, w=%d, h=%d\n", evt->x, evt->y, evt->width, evt->height );
+	INFO("get_pos: x=%d, y=%d\n", AppConfig.MainWndX, AppConfig.MainWndY );
 	return false;
 }
 
@@ -817,7 +817,7 @@ void CMainFrame::OnSiteList(GtkMenuItem* mitem, CMainFrame* _this)
 
 void CMainFrame::OnJumpToPage(GtkWidget* widget, CMainFrame* _this)
 {
-	INFO("On jump to, widget=%x, _this->m_JumpMenuItems[0]=%x", widget, _this->m_JumpMenuItems[0]);
+	INFO("On jump to, widget=%x, _this->m_JumpMenuItems[0]=%x\n", widget, _this->m_JumpMenuItems[0]);
 	for( int i = 0; i < 10; ++i )
 		if( widget == _this->m_JumpMenuItems[i] )
 		{
